# MRC-robot-challenge

./: README.md
rrl_platform_description/: CMakeLists.txt  package.xml
rrl_platform_description/rviz/: model.rviz
rrl_platform_description/urdf/: rrl_platform.gazebo.xacro  rrl_platform.urdf.xacro
rrl_platform_gazebo/: CMakeLists.txt  package.xml
rrl_platform_gazebo/launch/: rrl_platform_empty_world.launch  rrl_platform_house.launch  rrl_platform_world.launch
rrl_platform_gazebo/models/rrl_platform_house/: model.config  model.sdf
rrl_platform_gazebo/models/rrl_platform_world/: model.config  model.sdf
rrl_platform_gazebo/worlds/: rrl_platform_house.world  rrl_platform_world.world
rrl_platform_main/rrl_platform_bringup/: CMakeLists.txt  package.xml
rrl_platform_main/rrl_platform_bringup/launch/: urdf_test.launch
rrl_platform_main/rrl_platform_bringup/launch/includes/: description.launch.xml
