<?xml version="1.0"?>
<package format="2">
  <name>rrl_platform_description</name>
  <version>1.0.0</version>
  <description>
	  3D models of the RRL challenge robot platform for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="ipenskiy@umd.edu">Ivan Penskiy</author>
  <maintainer email="ipenskiy@umd.edu">Ivan Penskiy</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
