<?xml version="1.0"?>
<package format="2">
  <name>rrl_platform_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for the RRL challenge robot platform
  </description>
  <license>Apache 2.0</license>
  <author email="ipenskiy@umd.edu">Ivan Penskiy</author>
  <maintainer email="ipenskiy@umd.edu">Ivan Penskiy</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_gazebo</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
