<?xml version="1.0"?>
<package format="2">
  <name>rrl_platform_bringup</name>
  <version>1.0.0</version>
  <description>
    roslaunch scripts for starting the RRL challenge robot platform
  </description>
  <license>Apache 2.0</license>
  <author email="ipenskiy@umd.edu">Ivan Penskiy</author>
  <maintainer email="ipenskiy@umd.edu">Ivan Penskiy</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>platform_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
